# monte-carlo

./: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
.modal/: functions.py
_mcp_servers/: __init__.py  weather_server.py  yfinance_server.py
servers/: __init__.py  _code_mode.py  _runtime.py
servers/tavily/: __init__.py  interfaces.py  manifest.py  tavily_crawl.py  tavily_extract.py  tavily_map.py  tavily_search.py
servers/weather/: __init__.py  get_climate_averages.py  get_current_weather.py  get_historical_weather.py  get_hourly_forecast.py  get_weather_forecast.py  get_weather_statistics.py  interfaces.py  manifest.py
servers/yfinance/: __init__.py  calculate_volatility.py  compare_stocks.py  get_company_info.py  get_financial_metrics.py  get_market_index.py  get_stock_history.py  get_stock_quote.py  interfaces.py  manifest.py
src/: __init__.py
src/agents/: __init__.py  base.py  llm.py
src/sandbox/: __init__.py  executor.py
src/utils/: __init__.py  mcp_to_py.py
